@@ -19,6 +19,16 @@ end_package
 
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Collection
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -123,6 +133,216 @@ argument_list|,
 name|type
 argument_list|)
 expr_stmt|;
+block|}
+specifier|public
+name|Expression
+name|eqId
+parameter_list|(
+name|Object
+name|id
+parameter_list|)
+block|{
+return|return
+name|ExpressionFactory
+operator|.
+name|matchExp
+argument_list|(
+name|getExpression
+argument_list|()
+argument_list|,
+name|id
+argument_list|)
+return|;
+block|}
+specifier|public
+name|Expression
+name|inId
+parameter_list|(
+name|Collection
+argument_list|<
+name|Object
+argument_list|>
+name|ids
+parameter_list|)
+block|{
+return|return
+name|ExpressionFactory
+operator|.
+name|inExp
+argument_list|(
+name|getExpression
+argument_list|()
+argument_list|,
+name|ids
+argument_list|)
+return|;
+block|}
+specifier|public
+name|Expression
+name|inId
+parameter_list|(
+name|Object
+name|firstId
+parameter_list|,
+name|Object
+modifier|...
+name|moreIds
+parameter_list|)
+block|{
+name|Object
+index|[]
+name|ids
+init|=
+operator|new
+name|Object
+index|[
+name|moreIds
+operator|.
+name|length
+operator|+
+literal|1
+index|]
+decl_stmt|;
+name|ids
+index|[
+literal|0
+index|]
+operator|=
+name|firstId
+expr_stmt|;
+name|System
+operator|.
+name|arraycopy
+argument_list|(
+name|moreIds
+argument_list|,
+literal|0
+argument_list|,
+name|ids
+argument_list|,
+literal|1
+argument_list|,
+name|moreIds
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+return|return
+name|ExpressionFactory
+operator|.
+name|inExp
+argument_list|(
+name|getExpression
+argument_list|()
+argument_list|,
+name|ids
+argument_list|)
+return|;
+block|}
+specifier|public
+name|Expression
+name|neqId
+parameter_list|(
+name|Object
+name|id
+parameter_list|)
+block|{
+return|return
+name|ExpressionFactory
+operator|.
+name|noMatchExp
+argument_list|(
+name|getExpression
+argument_list|()
+argument_list|,
+name|id
+argument_list|)
+return|;
+block|}
+specifier|public
+name|Expression
+name|ninId
+parameter_list|(
+name|Collection
+argument_list|<
+name|Object
+argument_list|>
+name|ids
+parameter_list|)
+block|{
+return|return
+name|ExpressionFactory
+operator|.
+name|notInExp
+argument_list|(
+name|getExpression
+argument_list|()
+argument_list|,
+name|ids
+argument_list|)
+return|;
+block|}
+specifier|public
+name|Expression
+name|ninId
+parameter_list|(
+name|Object
+name|firstId
+parameter_list|,
+name|Object
+modifier|...
+name|moreIds
+parameter_list|)
+block|{
+name|Object
+index|[]
+name|ids
+init|=
+operator|new
+name|Object
+index|[
+name|moreIds
+operator|.
+name|length
+operator|+
+literal|1
+index|]
+decl_stmt|;
+name|ids
+index|[
+literal|0
+index|]
+operator|=
+name|firstId
+expr_stmt|;
+name|System
+operator|.
+name|arraycopy
+argument_list|(
+name|moreIds
+argument_list|,
+literal|0
+argument_list|,
+name|ids
+argument_list|,
+literal|1
+argument_list|,
+name|moreIds
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+return|return
+name|ExpressionFactory
+operator|.
+name|notInExp
+argument_list|(
+name|getExpression
+argument_list|()
+argument_list|,
+name|ids
+argument_list|)
+return|;
 block|}
 comment|/**      * {@inheritDoc}      */
 annotation|@
