@@ -19,6 +19,30 @@ end_package
 
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Arrays
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|exp
+operator|.
+name|Expression
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -396,6 +420,212 @@ name|other
 operator|.
 name|getExpression
 argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+specifier|public
+name|void
+name|eqId
+parameter_list|()
+block|{
+name|Expression
+name|exp
+init|=
+name|property
+operator|.
+name|eqId
+argument_list|(
+literal|1
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|ExpressionFactory
+operator|.
+name|exp
+argument_list|(
+literal|"path = 1"
+argument_list|)
+argument_list|,
+name|exp
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+specifier|public
+name|void
+name|inIdCollection
+parameter_list|()
+block|{
+name|Expression
+name|exp
+init|=
+name|property
+operator|.
+name|inId
+argument_list|(
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+literal|1
+argument_list|,
+literal|2
+argument_list|,
+literal|3
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|ExpressionFactory
+operator|.
+name|exp
+argument_list|(
+literal|"path in (1, 2, 3)"
+argument_list|)
+argument_list|,
+name|exp
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+specifier|public
+name|void
+name|inIdVararg
+parameter_list|()
+block|{
+name|Expression
+name|exp
+init|=
+name|property
+operator|.
+name|inId
+argument_list|(
+literal|1
+argument_list|,
+literal|2
+argument_list|,
+literal|3
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|ExpressionFactory
+operator|.
+name|exp
+argument_list|(
+literal|"path in (1, 2, 3)"
+argument_list|)
+argument_list|,
+name|exp
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+specifier|public
+name|void
+name|neqId
+parameter_list|()
+block|{
+name|Expression
+name|exp
+init|=
+name|property
+operator|.
+name|neqId
+argument_list|(
+literal|1
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|ExpressionFactory
+operator|.
+name|exp
+argument_list|(
+literal|"path<> 1"
+argument_list|)
+argument_list|,
+name|exp
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+specifier|public
+name|void
+name|ninIdCollection
+parameter_list|()
+block|{
+name|Expression
+name|exp
+init|=
+name|property
+operator|.
+name|ninId
+argument_list|(
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+literal|1
+argument_list|,
+literal|2
+argument_list|,
+literal|3
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|ExpressionFactory
+operator|.
+name|exp
+argument_list|(
+literal|"path not in (1, 2, 3)"
+argument_list|)
+argument_list|,
+name|exp
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+specifier|public
+name|void
+name|ninIdVararg
+parameter_list|()
+block|{
+name|Expression
+name|exp
+init|=
+name|property
+operator|.
+name|ninId
+argument_list|(
+literal|1
+argument_list|,
+literal|2
+argument_list|,
+literal|3
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|ExpressionFactory
+operator|.
+name|exp
+argument_list|(
+literal|"path not in (1, 2, 3)"
+argument_list|)
+argument_list|,
+name|exp
 argument_list|)
 expr_stmt|;
 block|}
